# Document-Plagiarism-Checker-gemini

./: README.md  app.py  plagiarism_backend.py  plagiarism_cache.json  pyproject.toml  replit.md
attached_assets/: ui_1754486488056.py
