[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "docx>=0.2.4",
    "docx2pdf>=0.1.8",
    "google-api-core>=2.25.1",
    "google-genai>=1.28.0",
    "google-generativeai>=0.8.5",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "reportlab>=4.4.3",
    "streamlit>=1.48.0",
]
